# lvgl

./: CMakeLists.txt  README.md  lv_conf.h  main.c
